@@ -2,9 +2,6 @@ package org.glavo.plumo.internal;
 
 import java.io.Closeable;
 import java.io.IOException;
-import java.lang.invoke.MethodHandle;
-import java.lang.invoke.MethodHandles;
-import java.lang.invoke.MethodType;
 import java.net.*;
 import java.nio.channels.Channels;
 import java.nio.channels.ServerSocketChannel;
@@ -17,9 +14,10 @@ import java.util.concurrent.locks.ReentrantLock;
 
 import org.glavo.plumo.Plumo;
 import org.glavo.plumo.internal.util.IOUtils;
-import org.jetbrains.annotations.NotNull;
 
 public final class HttpListener implements Runnable, AutoCloseable {
+
+    public final ReentrantLock runningLock = new ReentrantLock();
 
     private final ReentrantLock lock = new ReentrantLock();
     private volatile boolean closed = false;
@@ -41,25 +39,8 @@ public final class HttpListener implements Runnable, AutoCloseable {
         this.ss = ss;
         this.handler = handler;
         this.timeout = timeout;
-
-        if (executor == null) {
-            if (Constants.USE_VIRTUAL_THREAD == Boolean.TRUE || (Constants.USE_VIRTUAL_THREAD == null && VirtualThreadExecutor.AVAILABLE)) {
-                this.executor = new VirtualThreadExecutor();
-                this.shutdownExecutor = false;
-            } else {
-                final AtomicLong requestCount = new AtomicLong();
-                this.executor = Executors.newCachedThreadPool(r -> {
-                    Thread t = new Thread(r, "Plumo Request Processor (#" + requestCount.getAndIncrement() + ")");
-                    t.setDaemon(true);
-                    return t;
-                });
-                this.shutdownExecutor = true;
-            }
-
-        } else {
-            this.executor = executor;
-            this.shutdownExecutor = shutdownExecutor;
-        }
+        this.executor = executor;
+        this.shutdownExecutor = shutdownExecutor;
     }
 
     void close(HttpSession session) {
@@ -148,7 +129,12 @@ public final class HttpListener implements Runnable, AutoCloseable {
 
     @Override
     public void run() {
+        runningLock.lock();
         try {
+            if (closed) {
+                return;
+            }
+
             if (ss instanceof ServerSocket) {
                 ServerSocket serverSocket = (ServerSocket) ss;
                 do {
@@ -181,59 +167,7 @@ public final class HttpListener implements Runnable, AutoCloseable {
             }
         } finally {
             close();
-        }
-    }
-
-    private static final class VirtualThreadExecutor implements Executor {
-        static final boolean AVAILABLE;
-        static final boolean NEED_ENABLE_PREVIEW;
-
-        private static final MethodHandle newThread;
-
-        static {
-            boolean available = false;
-            boolean needEnablePreview = false;
-            MethodHandle newThreadHandle = null;
-
-            try {
-                Class<?> vtBuilder = Class.forName("java.lang.Thread$Builder$OfVirtual");
-
-                MethodHandles.Lookup lookup = MethodHandles.publicLookup();
-                Object factory = lookup.findStatic(Thread.class, "ofVirtual", MethodType.methodType(vtBuilder)).invoke();
-
-                newThreadHandle = lookup.findVirtual(vtBuilder, "unstarted", MethodType.methodType(Thread.class, Runnable.class))
-                        .bindTo(factory);
-
-                available = true;
-            } catch (UnsupportedOperationException ignored) {
-                needEnablePreview = true;
-            } catch (Throwable ignored) {
-            }
-
-            AVAILABLE = available;
-            NEED_ENABLE_PREVIEW = needEnablePreview;
-            newThread = newThreadHandle;
-        }
-
-        private final AtomicLong requestCount = new AtomicLong();
-
-        public VirtualThreadExecutor() {
-            if (!AVAILABLE) {
-                throw new UnsupportedOperationException(NEED_ENABLE_PREVIEW
-                        ? "Preview Features not enabled, need to run with --enable-preview"
-                        : "Please upgrade to Java 19+");
-            }
-        }
-
-        @Override
-        public void execute(@NotNull Runnable command) {
-            try {
-                Thread t = (Thread) newThread.invokeExact(command);
-                t.setName("Plumo Request Processor (#" + this.requestCount.getAndIncrement() + ")");
-                t.start();
-            } catch (Throwable e) {
-                throw new InternalError(e);
-            }
+            runningLock.unlock();
         }
     }
 }
